# 3dp-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.MD  LICENSE  Makefile  README.MD  TOOLS.md  analyze_all.py  build_pit_lane.py  build_startfinish.py  plugin.json  pyproject.toml  requirements.txt  server.py  setup.sh  test_server.py  track_curve_left.py  track_curve_right.py  track_ramp_bridge.py  track_straight.py  validate_compatibility.py
.claude-plugin/: plugin.json
.claude/skills/: add-text.md  analyze-overhangs.md  analyze-printability.md  combine-models.md  convert-format.md  create-dovetail.md  create-enclosure.md  create-gear.md  create-hinge.md  create-model.md  create-snap-fit.md  create-threaded-hole.md  estimate-print.md  export-drawing.md  export-model.md  generate-label.md  get-model-code.md  import-model.md  list-models.md  measure-model.md  pack-models.md  publish-cults3d.md  publish-github-release.md  publish-myminifactory.md  publish-thingiverse.md  search-models.md  section-view.md  shell-model.md  shrinkage-compensation.md  split-model-by-color.md  split-model.md  suggest-orientation.md  transform-model.md
docs/: README.md
docs/tools/: add_text.md  analyze_overhangs.md  analyze_printability.md  combine_models.md  convert_format.md  create_dovetail.md  (+27 more)
scripts/: build_all_tracks.py  inspect_stls.py  run-server.sh  setup-plugin.sh
tests/: conftest.py  test_analysis.py  test_community.py  test_components.py  test_constants.py  test_core.py  test_helpers.py  test_modification.py  test_publishing.py  test_transform.py  test_utility.py
(+25 files in other folders)
